# youtube-analytics-project

./: pyproject.toml
homework-1/: main.py  text.json
homework-2/: README.md  vdud.json
homework-4/: main.py
homework-5/: README.md  main.py
src/: channel.py  playlist.py  video.py
